chore:database setup

--- a/src/Planzo.Service/Planzo.Service.csproj
+++ b/src/Planzo.Service/Planzo.Service.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Planzo.Data\Planzo.Data.csproj" />
+    </ItemGroup>
+
 </Project>
