--- a/src/Planzo.Service/Planzo.Service.csproj
+++ b/src/Planzo.Service/Planzo.Service.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Planzo.Data\Planzo.Data.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MailKit" Version="4.9.0" />
+      <PackageReference Include="MimeKit" Version="4.9.0" />
+    </ItemGroup>
+
 </Project>
