--- a/src/Planzo.Service/Planzo.Service.csproj
+++ b/src/Planzo.Service/Planzo.Service.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="MailKit" Version="4.9.0" />
       <PackageReference Include="MimeKit" Version="4.9.0" />
     </ItemGroup>
